[package]
name = "anyeyeballs"
version = "0.1.0"
authors = ["Max Franke <mfranke@inet.tu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"]}
hyper = { version = "0.14.4", features = ["full"] }
pnet = "0.27.2"
socket2 = "0.3.19"